[package]
name = "mixmax-csv-uploader"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.85"
clap = { version = "4.5.26", features = ["derive"] }
csv = "1.3.1"
dotenv = "0.15.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
